package SV.TheFirstAid;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TheFirstAidApplication {

	public static void main(String[] args) {
		SpringApplication.run(TheFirstAidApplication.class, args);
	}
}
