@startuml
class TheFirstAidApplication{
    + void static main(String[] args)
}
class TheFirstAidBot extends TelegramLongPollingBot {
    - Processor processor
    + String getBotUsername()
    + String getBotToken()
    + void onUpdateReceived(Update update)
    + void setProcessor(Processor processor)
}
interface Processor{
    + void executeMessage(Message message)
    + void executeCallBackQuery(CallbackQuery callbackQuery)
    + default void process(Update update)
}

class DefaultProcessor implements Processor{
    - final CallbackQueryHandler callbackQueryHandler
    - final MessageHandler messageHandler
    + DefaultProcessor (CallbackQueryHandler callbackQueryHandler, MessageHandler messageHandler))
    + void executeMessage(Message message)
    + void executeCallBackQuery(CallbackQuery callbackQuery)
}
interface MessageSender{
    + void sendMessage(SendMessage sendMessage)
    + void sendEditMessage(EditMessageText editMessageText)
}

class MessageSenderImpl implements MessageSender {
    - TheFirstAidBot theFirstAidBot
    + void sendMessage(SendMessage sendMessage)
    + void sendEditMessage(EditMessageText editMessageText)
    + void setTheFirstAidBot(TheFirstAidBot theFirstAidBot)
}

interface Handler<T>{
    + void choose(T t)
}

class MessageHandler implements Handler{
    - final MessageSender messageSender
    + MessageHandler(MessageSender messageSender)
    + void choose(Message message)
    - InlineKeyboardMarkup inlineCPRKeyboardMarkup()
}

class CallbackQueryHandler implements Handler{
    - final MessageSender messageSender
    + CallbackQueryHandler(MessageSender messageSender)
    + void choose(CallbackQuery callbackQuery)
}

class Bleeding{
    - ReplyKeyboardMarkup getBleedingKeyBoard()
    + ReplyKeyboardMarkup getBleedingKeyBoardDemo()
    - ReplyKeyboardMarkup getExternalBleedingKeyboard()
    + ReplyKeyboardMarkup getExternalBleedingKeyboardDemo()
    - String bleeding()
    + String bleedingDemo()
    - String externalBleeding()
    + String externalBleedingDemo()
    - String internalBleeding()
    + String internalBleedingDemo()
    - String limbAmputation()
    + String limbAmputationDemo()
    - String limbBleeding()
    + String limbBleedingDemo()
    - String headNeckBleeding()
    + String headNeckBleedingDemo()
    - String bodyBleeding()
    + String bodeBleedingDemo()
}

class BoneInjuries{
    - ReplyKeyboardMarkup getBoneInjuriesKeyBoard()
    + ReplyKeyboardMarkup getBoneInjuriesKeyBoardDemo()
    - String boneInjuries()
    + String boneInjuriesDemo()
    - String openFracture()
    + String openFractureDemo()
    - String closedFracture()
    + String closedFractureDemo()
    - String dislocation()
    + String dislocationDemo()
}

class Burns{
    - ReplyKeyboardMarkup getBurnsKeyboard()
    + ReplyKeyboardMarkup getBurnsKeyboardDemo()
    - String burns()
    + String burnsDemo()
    - String thermalBurns()
    + String thermalBurnsDemo()
    - String chemicalBurns()
    + String chemicalBurnsDemo()
    - String electricBurns()
    + String electricBurnsDemo()
    - String frostbite()
    + String frostbiteDemo()
}

class CardiopulmonaryResuscitation{
    - ReplyKeyboardMarkup getCPRKeyBoard()
    + ReplyKeyboardMarkup getCPRKeyBoardDemo()
    - String CPR()
    + String CPR_Demo()
    - String CPR_Old()
    + String CPR_OldDemo()
    - String CPR_Young()
    + String CPR_YoungDemo()
    - String CPR_Baby()
    + String CPR_BabyDemo()
}

class GunshotWound{
    - String gunshotWound()
    + String gunshotWoundDemo()
}

class TraumaticBrainInjury{
    - String traumaticBrainInjury()
    + String traumaticBrainInjuryDemo()
}

class Services{
    - ReplyKeyboardMarkup getMenuKeyBoard()
    + ReplyKeyboardMarkup getMenuKeyBoardDemo()
    - String instruction()
    + String instructionDemo()
}

MessageHandler --> Bleeding
MessageHandler --> TraumaticBrainInjury
MessageHandler --> GunshotWound
MessageHandler --> CardiopulmonaryResuscitation
MessageHandler --> Services
MessageHandler --> Burns
MessageHandler --> BoneInjuries
CallbackQueryHandler --> CardiopulmonaryResuscitation
TheFirstAidBot --> Processor
DefaultProcessor --> MessageHandler
DefaultProcessor --> CallbackQueryHandler
MessageHandler --> MessageSender
CallbackQueryHandler --> MessageSender
MessageSenderImpl --> TheFirstAidBot
@enduml